# Para-Minds-SpeechXI

./: .dockerignore  .env.example  .gitignore  README.md  client.toml  pyproject.toml
.conf/: silero_vad.yaml
docker/: Dockerfile.client  docker-compose-connect.yaml  docker-compose-kafka.yaml  docker-compose-minds.yaml  docker-compose-mongodb.yaml  docker-compose-opts.yaml  docker-compose.yaml
docker/connectors/: mongo-sink.json
docker/mongodb/: Dockerfile
docker/scripts/: connect-init.sh
protos/: asr.proto  whisper.proto
src/asr/: doc.md
src/asr/api/: main.py
src/asr/application/: pipeline.py  session.py
src/asr/application/commands/: asr_service.py  process_stream.py  session.py
src/asr/application/ports/: asr_processor.py  message.py
src/asr/client/: client.py  whisper_client.py
src/asr/core/whisper/: base.py  tokenizer.py  utils.py
src/asr/domain/: entities.py  sentinels.py
src/asr/entrypoint/: main.py
src/asr/grpc_generated/: asr_pb2.py  whisper_pb2_grpc.py
src/asr/infrastructure/message/: audio_sub.py  text_pub.py
src/asr/infrastructure/whisper/: base.py  entities.py  faster.py  processor.py  utils.py
src/asr/server/: server.py  whisper_server.py
src/asr/utils/: audio.py
src/asr/vad/: base.py  silero_vad.py  wbtrc.py
src/client/: app.py  main.py
src/client/entities/: dto.py
src/client/infrastructure/: kafka_pub.py  mic_input.py
src/client/ports/: audio_input.py  message_pub.py  speech_filter.py
src/client/use_cases/: audio_send.py  filter_speech.py  ingest_audio.py
src/shared/protos_gen/: whisper_pb2_grpc.py
(+2 files in other folders)
