[project]
name = "asr-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.67.1",
    "grpcio-tools>=1.67.1",
    "nvidia-riva-client>=2.21.1",
    "pvporcupine>=3.0.5",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "pydub>=0.25.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "omegaconf>=2.3.0",
    "noisereduce>=3.0.3",
    "webrtcvad>=2.0.10",
    "faster-whisper>=1.2.0",
    "loguru>=0.7.3",
    "librosa>=0.11.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages]
find = { where = ["src"] }
